k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: MY-APP
  labels:
    name: MY-APP
