k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: MY-APP
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
  type: ClusterIP
