k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: MY-APP
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
