k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: MY-APP-ingress
  namespace: MY-APP
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /pins
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
      - path: /readyz
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
